feat: cli and repl